# ldl

./: .gitignore  CMakeLists.txt  linker.cpp
cget/cget/: cget.cmake
cget/include/glog/: log_severity.h  logging.h  raw_logging.h  stl_logging.h  vlog_is_on.h
cget/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-function-mockers.h  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-generated-nice-strict.h  gmock-generated-nice-strict.h.pump  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
cget/include/gmock/internal/: gmock-generated-internal-utils.h  gmock-generated-internal-utils.h.pump  gmock-internal-utils.h  gmock-port.h
cget/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
cget/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
include/Linker/: Linker.h
include/ObjectReader/: ObjectReader.h
lib/: CMakeLists.txt
lib/ElfReader/: CMakeLists.txt  ElfReader.cpp
lib/ObjectReader/: CMakeLists.txt  ObjectReader.cpp
scrap/: calif.pof  linkertest1.pof  linkertest43.pof  main.pof  mass.pof  newyork.pof  sample.pof
tests/: CMakeLists.txt
tests/LinkerTests/: CMakeLists.txt  LinkerTest.cpp
tests/ObjectReaderTests/: CMakeLists.txt  ObjectReaderTest.cpp
tools/DummyGenerator/: DummyGenerator.cpp
(+31 files in other folders)
